# pds3

./: README.md
camera_example/: sdkconfig  sdkconfig.old
camera_example/main/: CMakeLists.txt  take_picture.c
person_detection_respaldo/: sdkconfig  sdkconfig.old
person_detection_respaldo/main/: app_camera_esp.c  detection_responder.cc  detection_responder.h  image_provider.cc  main.cc  main_functions.cc  model_settings.cc  model_settings.h  person_detect_model_data.cc
